src/build/log/idf_py_stderr_output_154029
Command: make -j 18 all
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/blinky.c: In function 'app_main':
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/blinky.c:13:10: error: 'Re' undeclared (first use in this function)
   13 |         ;Re
      |          ^~
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/blinky.c:13:10: note: each undeclared identifier is reported only once for each function it appears in
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/blinky.c:13:12: error: expected ';' before '}' token
   13 |         ;Re
      |            ^
      |            ;
   14 |     }
      |     ~       
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/blinky.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:8651: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
